# aiNet

./: .gitignore  .pylintrc  .ruff.toml  README.md  poetry.toml  pyproject.toml  setup.sh
.github/workflows/: ruff.yml
notebooks/: Running.ipynb
notebooks/aiNet/: AiNetTest.ipynb
shared/datasets/: .gitignore  ruspini.csv
shared/datasets/Abstracts/Klinger/: Sample.ipynb  Sample_Filtered.ipynb
shared/datasets/Abstracts/NLP_Research/: Sample.ipynb
shared/datasets/Abstracts/arXiv/: ArXiv_Multi_Label.ipynb  Sample.ipynb
shared/datasets/News/CovidArticles/: Sample.ipynb
shared/datasets/News/NewsPopularity/: Sample Labelled.ipynb  Sample.ipynb
shared/datasets/News/WELFake/: Sample.ipynb
shared/datasets/Reviews/DrugReviews/: Sample.ipynb
shared/datasets/Reviews/Pitchfork/: Sample.ipynb
shared/datasets/Reviews/Sentiment Labelled/: Sample.ipynb
shared/datasets/Short Texts/Truth_Seeker/: Sample Labelled.ipynb  Sample.ipynb
src/: ainet_executor.py  main.py
src/execution_plans/: example_executions.json  executions_liwc_mrc_stagger.json  executions_sbert_ngram.json  executions_word2vec_doc2vec_fasttext.json
src/models/: __init__.py  ainet.py  sia.py
src/representations/: __init__.py  doc2vec.py  fasttext.py  liwc.py  mrc2.py  ngram.py  representation.py  sbert.py  stagger.py  word2vec.py
src/utils/: __init__.py  distance_wrappers.py  norma.py  plot_dendogram.py  progress_bar.py
src/utils/evaluations/: clustering_metrics.py
src/utils/text/: processing.py
