[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
gensim = "^4.3.0"
numba = "^0.57.1"
stanza = "1.5.1"
scipy = "^1.10.1"
networkx = "^3.0"
openpyxl = "^3.1.1"
yellowbrick = "^1.5"
sentence-transformers = "^2.2.2"
plotly = "^5.14.1"
emoji = "^2.6.0"
spacy = {version = "~3.6", extras = ["apple"], platform = "darwin"}
fasttext-wheel = "^0.9.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
spacy-stanza = "1.0.4"
cupy-cuda11x = "^12.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
autopep8 = "^2.0.1"
dill = "^0.3.6"
ipympl = "^0.9.3"
ruff = "0.1.3"
pylint = "^2.17.3"
jupyterlab = ">=3"
jupyterlab-dash = "^0.1.0a3"
ipywidgets = ">=7.6"
jupyterlab-execute-time = "3.0.0"
nbclassic = "^1.0.0"
octave-kernel = "^0.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
