[project]
name = "aiNet"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "pandas>=1.5.3,<2",
    "scikit-learn>=1.2.1,<2",
    "matplotlib>=3.7.0,<4",
    "seaborn>=0.12.2,<0.13",
    "gensim>=4.3.0,<5",
    "numpy>1.2.4",
    "numba>=0.57.1,<0.58",
    "stanza==1.5.1",
    "scipy>=1.10.1,<2",
    "networkx~=3.0",
    "openpyxl>=3.1.1,<4",
    "yellowbrick~=1.5",
    "sentence-transformers>=2.2.2,<3",
    "plotly>=5.14.1,<6",
    "emoji>=2.6.0,<3",
    "spacy[apple]>=3.6,<3.7 ; sys_platform == 'darwin'",
    "fasttext-wheel>=0.9.2,<0.10",
    "torch>=2.0.0, !=2.0.1, !=2.1.0",
    "spacy-stanza==1.0.4",
    "cupy-cuda11x>=12.2.0,<13",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "autopep8>=2.0.1,<3",
    "dill>=0.3.6,<0.4",
    "ipympl>=0.9.3,<0.10",
    "ruff==0.1.3",
    "pylint>=2.17.3,<3",
    "jupyterlab>=3",
    "jupyterlab-dash>=0.1.0a3,<0.2",
    "ipywidgets>=7.6",
    "jupyterlab-execute-time==3.0.0",
    "nbclassic>=1.0.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
